--- a/html/firstPage.html
+++ b/html/firstPage.html
@@ -39,6 +39,9 @@
                 <img src="https://i.ytimg.com/vi/4J_Ru-77Vqs/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLC5Wyi54uNhz7g-njHQ0U65exKIrw" alt="">
                 <img src="https://i.ytimg.com/vi/wQy7sl1AOMY/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLAENuQHe_uTFzEc_HR2r91TJuicwA" alt="">
                 <img src="https://i.ytimg.com/vi/Q7mL3sDJ_Xs/maxresdefault.jpg" alt="">
+                <img src="https://i.ytimg.com/vi/Ac9U1kyqMp0/maxresdefault.jpg" alt="">
+                <img src="https://i.ytimg.com/vi/P0TE1Q1LgxQ/maxresdefault.jpg" alt="">
+                <img src="https://i.ytimg.com/vi/3WCZKkp4AkI/maxresdefault.jpg" alt="">
             </div>
         </div>
     </div>
