메인 페이지 완성 및 footer 고정 문제 해결

--- a/html/firstPage.html
+++ b/html/firstPage.html
@@ -8,7 +8,7 @@
 </head>
 <body onload="fadein();">
     <div class="top">
-        <iframe class="bg_video" src="https://www.youtube.com/embed/3D1_C1y2d10?autoplay=1&mute=1&controls=0&si=Oo74vZvGCqtie2lq&amp;" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" muted auto></iframe>
+        <iframe class="bg_video" src="https://www.youtube.com/embed/3D1_C1y2d10?autoplay=1&mute=1&controls=0&si=Oo74vZvGCqtie2lq&amp&loop=1&playlist=3D1_C1y2d10;" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" muted auto></iframe>
         <div class="title">
             <h1>"당신이 본 영상, 진짜일까요?"</h1>
         </div>
@@ -18,8 +18,7 @@
         <h2>가짜 뉴스, AI 영상 현황</h2>
         <div class="content">
             <div class="img">
-                <img src="https://img4.yna.co.kr/etc/inner/KR/2018/11/22/AKR20181122147800017_03_i_P4.jpg" alt="가짜 뉴스 인식조사 결과">
-                <img src="https://www.kpf.or.kr/contents/commoneditor/20231127140154f4a8a823-5d6d-4a9c-a80b-1be95aeb79ac.png" alt="뉴스룸 AI 도입 경험">
+                <img src="../images/ser1.png" alt="">
             </div>
 
 
@@ -45,6 +44,10 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <p>Copyright 2025. 정대원, 이도연 All rights reserved.</p>
+    </footer>
 
     <script src="../js/firstPage.js"></script>
 </body>
