--- a/html/main.html
+++ b/html/main.html
@@ -9,7 +9,7 @@
 </head>
 <body onload="loadPage('firstPage')">
     <header>
-        <img src="../images/logo.png" alt="팩트체크 로고" class="logo">
+        <img src="../images/logo.png" alt="팩트체크 로고" class="logo" onclick="loadPage('firstPage)">
 
         <p class="menu_spread" onclick="menu_spread();">=</p>
 
@@ -25,10 +25,6 @@
     </header>
 
     <iframe src="" frameborder="0" width="100%" class="main"></iframe>
-
-    <footer>
-        <p>Copyright 2025. 정대원, 이도연 All rights reserved.</p>
-    </footer>
 
     <script src="../js/main.js"></script>
 </body>
