--- a/html/self-diagnosis/start.html
+++ b/html/self-diagnosis/start.html
@@ -9,8 +9,6 @@
 <body>
     <img src="../../images/imoji/curious.png" alt="궁금해하는 이모지">
     <h1>진짜와 가짜를 구별해 보세요</h1>
-    <a onclick="loadPage('game')">시작하기</a>
-
-    <script src="../../js/loadPage.js"></script>
+    <a href="game.html">시작하기</a>
 </body>
 </html>
