--- a/html/main.html
+++ b/html/main.html
@@ -15,8 +15,8 @@
 
         <nav class="toolbar">
             <ul>
-                <li onclick="loadPage('self-diagnosis')">정보 분별력 자가진단</li>
-                <li>정보 분별력 키우기</li>
+                <li onclick="loadPage('self-diagnosis');">정보 분별력 자가진단</li>
+                <li onclick="loadPage('learning');">정보 분별력 키우기</li>
                 <li>요즘 가짜 뉴스</li>
                 <li>커뮤니티</li>
                 <li>기타 사이트</li>
