--- a/html/community.html
+++ b/html/community.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="../css/thirdPage.css">
+    <link rel="stylesheet" href="../css/community.css">
 </head>
 <body>
     <div class="container">
         <h2>ㅍㅌㅊㅋ 커뮤니티</h2>
         <p>함께 팩트체크를 할 수 있는 공간</p>
 
-        <button onclick="openLoginPopup()" class="login_btn">로그인해서 참여하기</button>
+        <button onclick="openLoginPopup()" class="login_btn">로그인해서 참여하기</button><!--버튼 눌렀을 때 로그인 팝업창 열기-->
     </div>
-    <script src="../js/thirdPage.js"></script>
+    <script src="../js/community.js"></script>
 </body>
 </html>
