--- a/html/main.html
+++ b/html/main.html
@@ -18,8 +18,8 @@
                 <li onclick="loadPage('self-diagnosis');">정보 분별력 자가진단</li>
                 <li onclick="loadPage('learning');">정보 분별력 키우기</li>
                 <li>요즘 가짜 뉴스</li>
-                <li>커뮤니티</li>
-                <li>기타 사이트</li>
+                <li onclick="loadPage('community')">커뮤니티</li>
+                <li onclick="loadPage('etc')">기타 사이트</li>
             </ul>
         </nav>
     </header>
